# lastfm-rp

./: .gitignore  Cargo.toml  Makefile
contrib/: lastfm-rp.service
src/: main.rs
