[package]
name = "lastfm-rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
discord-rich-presence = "0.2.4"
dotenv = "0.15.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
